--- a/com.zizibujuan.mianzi/pom.xml
+++ b/com.zizibujuan.mianzi/pom.xml
@@ -29,10 +29,10 @@
 		<version>2.0</version>
 		<scope>provided</scope>
   	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-		<version>4.1.4.RELEASE</version>
+  	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.3.2</version>
 	</dependency>
   </dependencies>
   <properties>
