--- a/com.zizibujuan.mianzi/pom.xml
+++ b/com.zizibujuan.mianzi/pom.xml
@@ -34,16 +34,11 @@
 		<artifactId>commons-lang3</artifactId>
 		<version>3.3.2</version>
 	</dependency>
-	<dependency>
-		<groupId>org.apache.struts</groupId>
-		<artifactId>struts2-core</artifactId>
-		<version>2.3.20</version>
-	</dependency>
-	<dependency>
-		<groupId>org.apache.struts</groupId>
-		<artifactId>struts2-json-plugin</artifactId>
-		<version>2.3.20</version>
-	</dependency>
+  	<dependency>
+  		<groupId>com.zizibujuan</groupId>
+  		<artifactId>util.json</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
   <properties>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
